Dark Mode Fix For Stats

--- a/src/styles/dark/dashboardstats.module.css
+++ b/src/styles/dark/dashboardstats.module.css
@@ -86,6 +86,7 @@
   .card {
     align-items: flex-start;
     padding-left: 10px;
+    background-color: #000000;
   }
   .top {
     margin: 0px;
